# zlib_test2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  appveryor.yml  appveyor.yml  test.cpp  update-external.bat
minigzip/: CMakeLists.txt
